budowa formularza rejestracji

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,11 +2,14 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}Index{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
+    <header>
+        <a href="{{ path('register') }}">Rejestracja</a>
+    </header>
         {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+
     </body>
 </html>
