dodawanie widoku poradni

--- a/templates/admin_panel/add_user.html.twig
+++ b/templates/admin_panel/add_user.html.twig
@@ -11,6 +11,6 @@
     {{ form_row(addUserForm.nazwisko) }}
 
 
-    <button class="btn">Register</button>
+    <button class="btn">Dodaj</button>
     {{ form_end(addUserForm) }}
 {% endblock %}
