--- a/templates/admin_panel/index.html.twig
+++ b/templates/admin_panel/index.html.twig
@@ -6,5 +6,6 @@
 <h1>Panel administratora</h1>
     <div>
         <a href="{{ path('admin.add_user') }}">Dodaj użytownika</a>
+        <a href="{{ path('admin.poradnie') }}">Poradnie</a>
     </div>
 {% endblock %}
