--- a/templates/admin_panel/users/add_user.html.twig
+++ b/templates/admin_panel/users/add_user.html.twig
@@ -1,8 +1,7 @@
-{% extends 'base.html.twig' %}
+{% extends 'admin_panel/index.html.twig' %}
 
-{% block title %}Admin{% endblock %}
 
-{% block body %}
+{% block content %}
     <h1>Dodaj użytkownika</h1>
     {{ form_start(addUserForm) }}
     {{ form_row(addUserForm.email) }}
