--- a/templates/admin_panel/users/user_add.html.twig
+++ b/templates/admin_panel/users/user_add.html.twig
@@ -8,6 +8,7 @@
     {{ form_row(addUserForm.password) }}
     {{ form_row(addUserForm.imie) }}
     {{ form_row(addUserForm.nazwisko) }}
+    {{ form_widget(addUserForm.roles) }}
 
 
     <button class="btn">Dodaj</button>
