--- a/templates/admin_panel/poradnie/jednostka_add.html.twig
+++ b/templates/admin_panel/poradnie/jednostka_add.html.twig
@@ -16,7 +16,7 @@
                     <td>{{ lekarz.nazwisko ~ ' ' ~ lekarz.imie }}</td>
                     <td>{{ lekarz.specjalizacja }}</td>
                     <td>
-                         <a href="{{ path('admin.jednostka_create', {id_lekarza: lekarz.id, id_poradni: poradnia.id}) }}">Dodaj</a>
+                         <a class="add" href="{{ path('admin.jednostka_create', {id_lekarza: lekarz.id, id_poradni: poradnia.id}) }}">Dodaj</a>
                     </td>
                </tr>
           {% endfor %}
