--- a/templates/admin_panel/poradnie/poradnia_show.html.twig
+++ b/templates/admin_panel/poradnie/poradnia_show.html.twig
@@ -1,6 +1,13 @@
 {% extends 'admin_panel/index.html.twig' %}
 
 {% block content %}
+    {% for label, messages in app.flashes(['success', 'fail']) %}
+    {% for message in messages %}
+        <div class="flash-{{ label }}">
+            {{ message }}
+        </div>
+    {% endfor %}
+{% endfor %}
     <h1>{{ poradnia.nazwa }}</h1>
      <h1>Lekarze</h1>
     <table class="admin-table">
@@ -19,11 +26,11 @@
         <td>{{ lekarz.nazwisko ~ ' ' ~ lekarz.imie }}</td>
         <td>{{ lekarz.specjalizacja }}</td>
         <td>
-            <a href="{{ path('admin.jednostka_delete', {idLekarza: lekarz.id, idPoradni: poradnia.id}) }}">Usuń</a>
+            <a class="delete" href="{{ path('admin.jednostka_delete', {idLekarza: lekarz.id, idPoradni: poradnia.id}) }}">Usuń</a>
         </td>
         </tr>
     {% endfor %}
     </table>
 
-    <a href="{{ path('admin.jednostka_add', {id_poradni: poradnia.id}) }}">Dodaj lekarza do poradni</a>
+    <a href="{{ path('admin.jednostka_add', {id_poradni: poradnia.id}) }} onclick="return confirm('are u sure?'" ">Dodaj lekarza do poradni</a>
 {% endblock content %}
