--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,7 +4,11 @@
         <meta charset="UTF-8">
         <title>{% block title %}Index{% endblock %}</title>
         {% block stylesheets %}
-        <link rel="stylesheet" href="{{ asset('css/style.css') }}">
+            <link rel="stylesheet" href="{{ asset('css/style.css') }}">
+            <script
+                src="https://code.jquery.com/jquery-3.5.0.slim.min.js"
+                integrity="sha256-MlusDLJIP1GRgLrOflUQtshyP0TwT/RHXsI1wWGnQhs="
+                crossorigin="anonymous"></script>
         {% endblock %}
     </head>
     <body>
